Modify webpack to bundle vanilla JS in noReact directory.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
-    <!-- script for webpack and webpack-dev-server -->
+    <div id="graph"></div>
+    <!-- UNCOMMENT LINE BELOW FOR script for webpack and webpack-dev-server -->
     <script src="build/bundle.js"></script>
   </body>
 </html>
