Implement functional pseudo-random line graph.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React App</title>
+    <title>D3 Playground</title>
   </head>
   <body>
-    <div id="graph"></div>
+    <svg width='500' height='500' id='graph'></svg>
     <!-- UNCOMMENT LINE BELOW FOR script for webpack and webpack-dev-server -->
     <script src="build/bundle.js"></script>
   </body>
