--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>D3 Playground</title>
   </head>
   <body>
-    <svg width='500' height='500' id='graph'></svg>
+    <svg width='500' height='500' id='graph' style='border: 1px solid black;'></svg>
     <!-- UNCOMMENT LINE BELOW FOR script for webpack and webpack-dev-server -->
     <script src="build/bundle.js"></script>
   </body>
