Implement character info displays, and other minor changes
- Modified webpack dev server proxy
- Server serves a favicon
- Add serve-favicon dependency
- Add lots of styling
- Add custom dank mono font face

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>D3 Playground</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon/"/>
+    <title>DnD Radar</title>
   </head>
   <body>
     <div id='root'></div>
-    <!-- UNCOMMENT LINE BELOW FOR script for webpack and webpack-dev-server -->
+    <script src="build/bundle.js"></script>
   </body>
 </html>
